# YAMC

./: .gitignore  CMakeLists.txt  README.md
examples/ModelViewer/: ModelViewer.resource_order  ModelViewer.yyp
examples/ModelViewer/datafiles/cardboard_box/: source.txt
examples/ModelViewer/datafiles/firetruck/: source.txt
examples/ModelViewer/objects/OModelViewer/: CleanUp_0.gml  Create_0.gml  Draw_0.gml  Draw_64.gml  OModelViewer.yy  Step_0.gml
examples/ModelViewer/options/mac/: options_mac.yy
examples/ModelViewer/options/main/: options_main.yy
examples/ModelViewer/options/operagx/: options_operagx.yy
examples/ModelViewer/options/windows/: options_windows.yy
examples/ModelViewer/rooms/Room1/: Room1.yy
examples/ModelViewer/scripts/yamc/: yamc.gml  yamc.yy
examples/ModelViewer/shaders/ShBasic/: ShBasic.vsh  ShBasic.yy
examples/ModelViewer/sprites/SprDiffuse/: SprDiffuse.yy
examples/ModelViewer/sprites/SprGloss/: SprGloss.yy
examples/ModelViewer/sprites/SprNormal/: SprNormal.yy
examples/ModelViewer/sprites/SprSpecular/: SprSpecular.yy
include/: Args.hpp  Config.hpp  math.hpp  writing.hpp
src/: Args.cpp  Config.cpp  main.cpp  writing.cpp
utils/: ShBasic.fsh  yamc.gml
